--- a/detail.html
+++ b/detail.html
@@ -25,6 +25,9 @@
 </head>
 
 <body>
+    <div class="preloader">
+        <img src="/assets/img/Unilucky logo.png" class="img-fluid" alt="...">
+    </div>
 
     <!-- navbar-light bg-light -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-transparent">
@@ -544,6 +547,12 @@
                 slideMargin: 0
             });
         });
+         // preloader
+         window.onload = function () {
+            setInterval(function () {
+                document.querySelector(".preloader").style.display = "none";
+            }, 500);
+        }
     </script>
 </body>
 
