--- a/detail.html
+++ b/detail.html
@@ -5,21 +5,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content=" Cộng đồng kinh doanh số UTO ">
-    <meta name="keywords" content="Cộng đồng kinh doanh, Sàn thương mại, Sàn công nghệ">
+    <meta name="description" content=" Quay số trúng thưởng cùng unilucky ">
+    <meta name="keywords" content="Quay số trúng thưởng cùng unilucky">
     <meta name="author" content="UTO">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
-    <meta property="og:image" content="https://uto.vn/storage/images/logo/og-img.jpg">
-    <meta property="og:image:alt" content="Cộng đồng kinh doanh số UTO">
+    <meta property="og:image" content="./assets/img/unilucky.png">
+    <meta property="og:image:alt" content="Quay số trúng thưởng cùng unilucky">
 
-    <link rel="shortcut icon" type="image/x-icon" href="https://uto.vn/storage/images/logo/fav.png">
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/unilucky.png">
+    <link rel="icon" type="image/x-icon" href="./assets/img/unilucky.png">
     <link rel="stylesheet" href="assets/css/bootstrap-5/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/index.css">
     <link rel="stylesheet" href="assets/css/fontawesome-6.1/css/all.min.css">
     <link rel='stylesheet' href="assets/css/wow.css">
     <link rel="stylesheet" href="assets/css/owl-carousel/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl-carousel/owl.theme.default.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/css/lightslider.min.css">
 
     <title>UNION LUCKY</title>
 </head>
@@ -32,8 +32,7 @@
     <!-- navbar-light bg-light -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-transparent">
         <div class="container">
-            <a href="./index.html" class="navbar-brand img-logo"><img src="./assets/img/Unilucky logo.png"
-                    alt=""></a>
+            <a href="./index.html" class="navbar-brand img-logo"><img src="./assets/img/Unilucky logo.png" alt=""></a>
 
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -547,8 +546,8 @@
                 slideMargin: 0
             });
         });
-         // preloader
-         window.onload = function () {
+        // preloader
+        window.onload = function () {
             setInterval(function () {
                 document.querySelector(".preloader").style.display = "none";
             }, 500);
