--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content=" Cộng đồng kinh doanh số UTO ">
-    <meta name="keywords" content="Cộng đồng kinh doanh, Sàn thương mại, Sàn công nghệ">
+    <meta name="description" content=" Quay số trúng thưởng cùng unilucky ">
+    <meta name="keywords" content="Quay số trúng thưởng cùng unilucky">
     <meta name="author" content="UTO">
     <meta name="viewport" content="width=device-width, initial-scale=1.0,maximum-scale=1">
-    <meta property="og:image" content="https://uto.vn/storage/images/logo/og-img.jpg">
-    <meta property="og:image:alt" content="Cộng đồng kinh doanh số UTO">
+    <meta property="og:image" content="./assets/img/unilucky.png">
+    <meta property="og:image:alt" content="Quay số trúng thưởng cùng unilucky">
 
-    <link rel="shortcut icon" type="image/x-icon" href="https://uto.vn/storage/images/logo/fav.png">
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/unilucky.png">
+    <link rel="icon" type="image/x-icon" href="./assets/img/unilucky.png">
     <link rel="stylesheet" href="assets/css/bootstrap-5/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/index.css">
     <link rel="stylesheet" href="assets/css/fontawesome-6.1/css/all.min.css">
@@ -25,13 +26,13 @@
 
 <body>
     <div class="preloader">
-        <img src="/assets/img/Unilucky logo.png" class="img-fluid" alt="...">
+        <img src="/assets/img/unilucky.png" class="img-fluid" alt="...">
     </div>
 
     <!-- navbar-light bg-light -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-transparent">
         <div class="container">
-            <a href="./index.html" class="navbar-brand img-logo"><img src="./assets/img/Unilucky logo.png" alt=""></a>
+            <a href="./index.html" class="navbar-brand img-logo"><img src="./assets/img/unilucky.png" alt=""></a>
 
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -1303,7 +1304,7 @@
                     <a href="https://uto.vn" target="_blank" class="col-lg-4 col-md-12 text-center"><img
                             src="https://uniontek.vn/assets/img/logo-uto.png"
                             class="img-fluid  img-footer img-footer-uto" alt=""></a>
-                    <a href="#" class="col-lg-4 col-md-12 text-center "><img src="./assets/img/Unilucky logo.png"
+                    <a href="#" class="col-lg-4 col-md-12 text-center "><img src="./assets/img/unilucky.png"
                             class="img-fluid  img-footer img-footer-uto" alt=""></a>
                 </div>
                 <div class="row d-flex justify-content-center align-items-center">
