--- a/detail.html
+++ b/detail.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="./assets/img/unilucky.png">
     <meta property="og:image:alt" content="Quay số trúng thưởng cùng unilucky">
 
-    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/unilucky.png">
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/uniluckyfav.png">
     <link rel="icon" type="image/x-icon" href="./assets/img/unilucky.png">
     <link rel="stylesheet" href="assets/css/bootstrap-5/css/bootstrap.css">
     <link rel="stylesheet" href="assets/css/index.css">
