--- a/detail.html
+++ b/detail.html
@@ -20,19 +20,19 @@
     <link rel='stylesheet' href="assets/css/wow.css">
     <link rel="stylesheet" href="assets/css/owl-carousel/owl.carousel.min.css">
     <link rel="stylesheet" href="assets/css/owl-carousel/owl.theme.default.min.css">
-
+    <link rel="stylesheet" href="assets/css/lightslider/lightslider.css">
     <title>UNION LUCKY</title>
 </head>
 
 <body>
     <div class="preloader">
-        <img src="/assets/img/Unilucky logo.png" class="img-fluid" alt="...">
+        <img src="/assets/img/unilucky.png" class="img-fluid" alt="...">
     </div>
 
     <!-- navbar-light bg-light -->
     <nav class="navbar navbar-expand-lg navbar-dark navbar-transparent">
         <div class="container">
-            <a href="./index.html" class="navbar-brand img-logo"><img src="./assets/img/Unilucky logo.png" alt=""></a>
+            <a href="./index.html" class="navbar-brand img-logo"><img src="./assets/img/unilucky.png" alt=""></a>
 
             <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -248,7 +248,7 @@
                     <a href="https://uto.vn" target="_blank" class="col-lg-4 col-md-12 text-center"><img
                             src="https://uniontek.vn/assets/img/logo-uto.png"
                             class="img-fluid  img-footer img-footer-uto" alt=""></a>
-                    <a href="#" class="col-lg-4 col-md-12 text-center "><img src="./assets/img/Unilucky logo.png"
+                    <a href="#" class="col-lg-4 col-md-12 text-center "><img src="./assets/img/unilucky.png"
                             class="img-fluid  img-footer img-footer-uto" alt=""></a>
                 </div>
                 <div class="row d-flex justify-content-center align-items-center">
@@ -532,7 +532,7 @@
     <script src="/assets/js/wow.min.js"></script>
     <script src="/assets/css/bootstrap-5/js/bootstrap.bundle.min.js"></script>
     <script src="assets/css/owl-carousel/owl.carousel.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightslider/1.1.6/js/lightslider.min.js"></script>
+    <script src="/assets/css/lightslider/lightslider.js"></script>
     <script>
         $(document).ready(function () {
             $('#vertical').lightSlider({
