--- a/detail.html
+++ b/detail.html
@@ -30,19 +30,24 @@
     </div>
 
     <!-- navbar-light bg-light -->
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-transparent">
-        <div class="container">
+    <div class="container-fluid fixed-top px-0 wow fadeIn" data-wow-delay="0.1s"
+        style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn; top: 0px;">
+        <nav class="navbar navbar-expand-lg  navbar-dark  py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s"
+            style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
             <a href="./index.html" class="navbar-brand img-logo"><img src="./assets/img/unilucky.png" alt=""></a>
 
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <button class="btn btn-custom-nav" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav ms-auto">
-
-                    <div class="navbar-nav">
-
+            <div class="offcanvas offcanvas-start" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+                <div class="offcanvas-header">
+                    <img src="./assets/img/unilucky.png" class="img-fluid w-50 " alt="">
+                    <button type="button" class="btn-close text-reset " data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <div class="navbar-nav ms-auto p-lg-0 custom-menu-canvas">
                         <div class="input-group search-custom">
                             <input type="text" class="form-control" aria-label="Text input with dropdown button"
                                 placeholder="What are you looking for ?">
@@ -68,17 +73,121 @@
                         </div>
 
                         <div class="avatar-custom">
-                            <img src="https://mdbcdn.b-cdn.net/img/new/avatars/1.webp" class="rounded-circle shadow-4"
-                                alt="Avatar" />
-                            <p>Dương Đẹp Trai</p>
+                            <ul class="avt-drop-menu">
+                                <div style="border-bottom: 1px solid rgba(255, 255, 255, 0.418);">
+                                    <!-- <p class="monney">Tài khoản unilucky</p> -->
+                                    <h4 class="monney mb-2">123.456 VNĐ <a href="https://uniontek.vn"
+                                            class="right badge badge-danger">Nạp Ngay</a></h4>
+                                </div>
+                                <li class="d-flex align-items-center">
+                                    <img src="./assets/img/ic1.png" alt="">
+                                    <a class="dropdown-item" href="#">Thông tin cá nhân</a>
+                                </li>
+                                <li class="d-flex align-items-center">
+                                    <img src="./assets/img/ic2.png" alt="">
+                                    <a class="dropdown-item" href="#">Lịch sử mua vé</a>
+                                </li>
+                                <li class="d-flex align-items-center">
+                                    <img src="./assets/img/ic3.png" alt="">
+                                    <a class="dropdown-item" href="#">Hướng dẫn chơi</a>
+                                </li>
+                                <li class="d-flex align-items-center">
+                                    <img src="./assets/img/ic4.png" alt="">
+                                    <a class="dropdown-item" href="#">Điều khoản sử dụng</a>
+                                </li>
+                                <li class="d-flex align-items-center">
+                                    <img src="./assets/img/ic5.png" alt="">
+                                    <a class="dropdown-item" href="#">Liên hệ</a>
+                                </li>
+                                <li class="d-flex align-items-center">
+                                    <img src="./assets/img/ic6.png" alt="">
+                                    <a class="dropdown-item" href="./sigin.html">Đăng xuất</a>
+                                </li>
+                            </ul>
                         </div>
-
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
 
-        </div>
-    </nav>
+            <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
+                data-bs-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-nav ms-auto p-4 p-lg-0">
+                    <div class="input-group search-custom">
+                        <input type="text" class="form-control" aria-label="Text input with dropdown button"
+                            placeholder="What are you looking for ?">
+
+                        <button class="btn  dropdown-toggle filter-item" type="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">Filter</button>
+
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Separated link</a></li>
+                        </ul>
+                        <button type="button" class="ms-3 btn search-item">Search</button>
+                    </div>
+
+
+                    <div class="cart-custom ">
+                        <i class="fa-solid fa-cart-arrow-down"></i>
+                    </div>
+
+
+                    <div class="" id="dropdownMenuLink" data-bs-toggle="dropdown">
+                        <div class="avatar-custom">
+                            <img src="https://mdbcdn.b-cdn.net/img/new/avatars/1.webp" class="rounded-circle shadow-4"
+                                alt="Avatar" />
+                            <p>Dương Đẹp Trai</p>
+                        </div>
+                    </div>
+
+                    <ul class="dropdown-menu avt-drop" aria-labelledby="dropdownMenuLink">
+                        <div style="border-bottom: 1px solid rgba(255, 255, 255, 0.418);">
+                            <!-- <p class="monney">Tài khoản unilucky</p> -->
+                            <h4 class="monney mb-2">123.456 VNĐ <a href="https://uniontek.vn"
+                                    class="right badge badge-danger">Nạp Ngay</a></h4>
+                        </div>
+                        <li class="d-flex align-items-center">
+                            <img src="./assets/img/ic1.png" alt="">
+                            <a class="dropdown-item" href="./login.html">Thông tin cá nhân</a>
+                        </li>
+                        <li class="d-flex align-items-center">
+                            <img src="./assets/img/ic2.png" alt="">
+                            <a class="dropdown-item" href="#">Lịch sử mua vé</a>
+                        </li>
+                        <li class="d-flex align-items-center">
+                            <img src="./assets/img/ic3.png" alt="">
+                            <a class="dropdown-item" href="#">Hướng dẫn chơi</a>
+                        </li>
+                        <li class="d-flex align-items-center">
+                            <img src="./assets/img/ic4.png" alt="">
+                            <a class="dropdown-item" href="#">Điều khoản sử dụng</a>
+                        </li>
+                        <li class="d-flex align-items-center">
+                            <img src="./assets/img/ic5.png" alt="">
+                            <a class="dropdown-item" href="#">Liên hệ</a>
+                        </li>
+                        <li class="d-flex align-items-center">
+                            <img src="./assets/img/ic6.png" alt="">
+                            <a class="dropdown-item" href="./sigin.html">Đăng xuất</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
 
 
     <!-- ============================================== main============================ -->
@@ -547,11 +656,15 @@
             });
         });
         // preloader
-        window.onload = function () {
-            setInterval(function () {
-                document.querySelector(".preloader").style.display = "none";
-            }, 500);
-        }
+        // window.onload = function () {
+        //     setInterval(function () {
+        //         document.querySelector(".preloader").style.display = "none";
+        //     }, 544444440);
+        // }
+
+        window.addEventListener('load', (event) => {
+            document.querySelector(".preloader").style.display = "none";
+        })
     </script>
 </body>
 
