--- a/index.html
+++ b/index.html
@@ -29,20 +29,25 @@
         <img src="/assets/img/unilucky.png" class="img-fluid" alt="...">
     </div>
 
-    <!-- navbar-light bg-light -->
-    <nav class="navbar navbar-expand-lg navbar-dark navbar-transparent">
-        <div class="container">
+    <!-- ===============================uniontek============================== -->
+    <div class="container-fluid fixed-top px-0 wow fadeIn" data-wow-delay="0.1s"
+        style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn; top: 0px;">
+        <nav class="navbar navbar-expand-lg  navbar-dark  py-lg-0 px-lg-5 wow fadeIn" data-wow-delay="0.1s"
+            style="visibility: visible; animation-delay: 0.1s; animation-name: fadeIn;">
             <a href="./index.html" class="navbar-brand img-logo"><img src="./assets/img/unilucky.png" alt=""></a>
 
-            <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
+            <button class="btn btn-custom-nav" type="button" data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
                 <span class="navbar-toggler-icon"></span>
             </button>
-
-            <div class="collapse navbar-collapse" id="navbarCollapse">
-                <div class="navbar-nav ms-auto">
-
-                    <div class="navbar-nav">
-
+            <div class="offcanvas offcanvas-start" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+                <div class="offcanvas-header">
+                    <img src="./assets/img/unilucky.png" class="img-fluid w-50 " alt="">
+                    <button type="button" class="btn-close text-reset " data-bs-dismiss="offcanvas"
+                        aria-label="Close"></button>
+                </div>
+                <div class="offcanvas-body">
+                    <div class="navbar-nav ms-auto p-lg-0 custom-menu-canvas">
                         <div class="input-group search-custom">
                             <input type="text" class="form-control" aria-label="Text input with dropdown button"
                                 placeholder="What are you looking for ?">
@@ -68,17 +73,121 @@
                         </div>
 
                         <div class="avatar-custom">
-                            <img src="https://mdbcdn.b-cdn.net/img/new/avatars/1.webp" class="rounded-circle shadow-4"
-                                alt="Avatar" />
-                            <p>Dương Đẹp Trai</p>
+                            <ul class="avt-drop-menu">
+                                <div style="border-bottom: 1px solid rgba(255, 255, 255, 0.418);">
+                                    <!-- <p class="monney">Tài khoản unilucky</p> -->
+                                    <h4 class="monney mb-2">123.456 VNĐ <a href="https://uniontek.vn"
+                                            class="right badge badge-danger">Nạp Ngay</a></h4>
+                                </div>
+                                <li class="d-flex align-items-center">
+                                    <img src="./assets/img/ic1.png" alt="">
+                                    <a class="dropdown-item" href="./login.html">Thông tin cá nhân</a>
+                                </li>
+                                <li class="d-flex align-items-center">
+                                    <img src="./assets/img/ic2.png" alt="">
+                                    <a class="dropdown-item" href="#">Lịch sử mua vé</a>
+                                </li>
+                                <li class="d-flex align-items-center">
+                                    <img src="./assets/img/ic3.png" alt="">
+                                    <a class="dropdown-item" href="#">Hướng dẫn chơi</a>
+                                </li>
+                                <li class="d-flex align-items-center">
+                                    <img src="./assets/img/ic4.png" alt="">
+                                    <a class="dropdown-item" href="#">Điều khoản sử dụng</a>
+                                </li>
+                                <li class="d-flex align-items-center">
+                                    <img src="./assets/img/ic5.png" alt="">
+                                    <a class="dropdown-item" href="#">Liên hệ</a>
+                                </li>
+                                <li class="d-flex align-items-center">
+                                    <img src="./assets/img/ic6.png" alt="">
+                                    <a class="dropdown-item" href="./sigin.html">Đăng xuất</a>
+                                </li>
+                            </ul>
                         </div>
-
+                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
                     </div>
                 </div>
             </div>
 
-        </div>
-    </nav>
+            <button type="button" class="navbar-toggler me-4" data-bs-toggle="collapse"
+                data-bs-target="#navbarCollapse">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarCollapse">
+                <div class="navbar-nav ms-auto p-4 p-lg-0">
+                    <div class="input-group search-custom">
+                        <input type="text" class="form-control" aria-label="Text input with dropdown button"
+                            placeholder="What are you looking for ?">
+
+                        <button class="btn  dropdown-toggle filter-item" type="button" data-bs-toggle="dropdown"
+                            aria-expanded="false">Filter</button>
+
+                        <ul class="dropdown-menu">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                            <li>
+                                <hr class="dropdown-divider">
+                            </li>
+                            <li><a class="dropdown-item" href="#">Separated link</a></li>
+                        </ul>
+                        <button type="button" class="ms-3 btn search-item">Search</button>
+                    </div>
+
+                    <div class="cart-custom ">
+                        <i class="fa-solid fa-cart-arrow-down"></i>
+                    </div>
+
+
+                    <div class="" id="dropdownMenuLink" data-bs-toggle="dropdown">
+                        <div class="avatar-custom">
+                            <img src="https://mdbcdn.b-cdn.net/img/new/avatars/1.webp" class="rounded-circle shadow-4"
+                                alt="Avatar" />
+                            <p>Dương Đẹp Trai</p>
+                        </div>
+                    </div>
+
+                    <ul class="dropdown-menu avt-drop" aria-labelledby="dropdownMenuLink">
+                        <div style="border-bottom: 1px solid rgba(255, 255, 255, 0.418);">
+                            <!-- <p class="monney">Tài khoản unilucky</p> -->
+                            <h4 class="monney mb-2">123.456 VNĐ <a href="https://uniontek.vn"
+                                    class="right badge badge-danger">Nạp Ngay</a></h4>
+                        </div>
+                        <li class="d-flex align-items-center">
+                            <img src="./assets/img/ic1.png" alt="">
+                            <a class="dropdown-item" href="./login.html">Thông tin cá nhân</a>
+                        </li>
+                        <li class="d-flex align-items-center">
+                            <img src="./assets/img/ic2.png" alt="">
+                            <a class="dropdown-item" href="#">Lịch sử mua vé</a>
+                        </li>
+                        <li class="d-flex align-items-center">
+                            <img src="./assets/img/ic3.png" alt="">
+                            <a class="dropdown-item" href="#">Hướng dẫn chơi</a>
+                        </li>
+                        <li class="d-flex align-items-center">
+                            <img src="./assets/img/ic4.png" alt="">
+                            <a class="dropdown-item" href="#">Điều khoản sử dụng</a>
+                        </li>
+                        <li class="d-flex align-items-center">
+                            <img src="./assets/img/ic5.png" alt="">
+                            <a class="dropdown-item" href="#">Liên hệ</a>
+                        </li>
+                        <li class="d-flex align-items-center">
+                            <img src="./assets/img/ic6.png" alt="">
+                            <a class="dropdown-item" href="./sigin.html">Đăng xuất</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+    <!-- ===============================uniontek============================== -->
 
 
     <!-- ============================================== main============================ -->
@@ -97,7 +206,7 @@
 
             <div class="title-cate d-flex justify-content-between py-5">
                 <h3>DANH MỤC</h3>
-                <h3 class="me-3">XEM TẤT CẢ</h3>
+                <a href="#" class="me-3">XEM TẤT CẢ</a>
             </div>
 
             <!-- slider======== -->
@@ -144,7 +253,7 @@
 
 
             <div class="tab-content" id="nav-tabContent">
-                <div class="tab-pane fade show active" id="ic-one" aria-labelledby="one">
+                <div class="tab-pane  show active" id="ic-one" aria-labelledby="one">
                     <!-- =================== -->
                     <div class="owl-slider">
                         <div class="owl-carousel item-category">
@@ -458,7 +567,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade" id="ic-two" aria-labelledby="two">
+                <div class="tab-pane " id="ic-two" aria-labelledby="two">
                     <div class="owl-slider">
                         <div class="owl-carousel item-category">
                             <div class="col-card">
@@ -529,7 +638,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade" id="ic-three" aria-labelledby="three">
+                <div class="tab-pane " id="ic-three" aria-labelledby="three">
                     <div class="owl-slider">
                         <div class="owl-carousel item-category">
                             <div class="col-card">
@@ -633,7 +742,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade" id="ic-four" aria-labelledby="four">
+                <div class="tab-pane " id="ic-four" aria-labelledby="four">
                     <div class="owl-slider">
                         <div class="owl-carousel item-category">
                             <div class="col-card">
@@ -704,7 +813,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade" id="ic-five" aria-labelledby="five">
+                <div class="tab-pane " id="ic-five" aria-labelledby="five">
                     <div class="owl-slider">
                         <div class="owl-carousel item-category">
                             <div class="col-card">
@@ -862,7 +971,7 @@
                 </li>
             </ul>
             <div class="tab-content" id="myTabContent">
-                <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+                <div class="tab-pane  show active" id="home" role="tabpanel" aria-labelledby="home-tab">
                     <div class="row">
                         <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 col-xs-6 col-6">
                             <div class="col-card">
@@ -1162,7 +1271,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                <div class="tab-pane " id="profile" role="tabpanel" aria-labelledby="profile-tab">
                     <div class="row">
                         <div class="col-xl-3 col-lg-4 col-md-4 col-sm-6 col-xs-6 col-6">
                             <div class="col-card">
@@ -1465,8 +1574,6 @@
             // $('.owl-carousel .nav-link').click(function(e){
             //     $('.item').removeClass("active");
             //     $('.item').addClass("active");
-
-
             // });
         });
 
@@ -1509,15 +1616,42 @@
 
         startTimer(55 * 3600); // 4 minutes in seconds
 
-
-
         // preloader
-        window.onload = function () {
-            setInterval(function () {
-                document.querySelector(".preloader").style.display = "none";
-            }, 500);
-        }
+        // window.onload = function () {
+        //     setInterval(function () {
+        //         document.querySelector(".preloader").style.display = "none";
+        //     }, 5999999900);
+        // }
+
+        window.addEventListener('load', (event) => {
+            document.querySelector(".preloader").style.display = "none";
+        })
     </script>
 </body>
 
 </html>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
