--- a/muahangmayman.html
+++ b/muahangmayman.html
@@ -326,10 +326,6 @@
                 </div>
 
 
-
-
-
-
                 <div class="col-lg-9">
                     <div class="row">
                         <div class="col-lg-4">
@@ -341,7 +337,7 @@
                                         <h6>Trị giá: 30.000.00 VNĐ</h6>
                                         <h6 class=" mt-3">MỆNH GIÁ</h6>
                                         <h5 class="item-rate">30.000 VNĐ</h5>
-                                        <a href="#" class="btn btn-gradient">Mua Ngay</a>
+                                        <a href="#" class="btn btn-gradient nhapnhay">Mua Ngay</a>
                                     </div>
                                 </div>
                             </div>
@@ -501,7 +497,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
